feature/navis ― Starting unit tests for CrendentialsProviderFactory